--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,7 +1,6 @@
 name: Build and Push Docker Image (Manual Branch Select)
 
 on:
-  # 仅允许手动运行工作流，并定义输入参数
   workflow_dispatch:
     inputs:
       target_branch:
@@ -10,7 +9,6 @@ on:
         default: 'mainnel'
 
 env:
-  # 镜像的基础名称，请根据您的项目名称确认
   IMAGE_NAME: merge-sub
 
 jobs:
@@ -21,34 +19,34 @@ jobs:
       packages: write
 
     steps:
-      # 1. 检出用户指定的分支
-      - name: Checkout repository (Branch: ${{ github.event.inputs.target_branch }})
+      # 1. 检出用户指定的分支 - 【修正：添加双引号】
+      - name: "Checkout repository (Branch: ${{ github.event.inputs.target_branch }})"
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.inputs.target_branch }}
 
-      # 2. 登录到 GitHub Container Registry (GHCR)
-      - name: Log in to GitHub Container Registry
+      # 2. 登录到 GitHub Container Registry (GHCR) - 【修正：添加双引号】
+      - name: "Log in to GitHub Container Registry"
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 3. 设置 Buildx
-      - name: Set up Docker Buildx
+      # 3. 设置 Buildx - 【修正：添加双引号】
+      - name: "Set up Docker Buildx"
         uses: docker/setup-buildx-action@v3
 
-      # 4. 构建并推送 Docker 镜像
-      - name: Build and Push Docker Image
+      # 4. 构建并推送 Docker 镜像 - 【修正：添加双引号】
+      - name: "Build and Push Docker Image"
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
           push: true
           platforms: linux/amd64
-          tags:
-            - ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.target_branch }}-latest
-            - ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.target_branch }}
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.target_branch }}-latest
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.target_branch }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
