--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image (Manual Branch Select)
+name: Build and Push Docker Image
 
 on:
   workflow_dispatch:
@@ -6,7 +6,7 @@ on:
       target_branch:
         description: 'Target branch to build the Docker image from'
         required: true
-        default: 'mainnel'
+        default: 'main'
 
 env:
   IMAGE_NAME: merge-sub
@@ -19,13 +19,11 @@ jobs:
       packages: write
 
     steps:
-      # 1. 检出用户指定的分支 - 【修正：添加双引号】
-      - name: "Checkout repository (Branch: ${{ github.event.inputs.target_branch }})"
+      - name: Checkout repository (Branch: ${{ github.event.inputs.target_branch }})
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.inputs.target_branch }}
 
-      # 2. 登录到 GitHub Container Registry (GHCR) - 【修正：添加双引号】
       - name: "Log in to GitHub Container Registry"
         uses: docker/login-action@v3
         with:
@@ -33,11 +31,9 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 3. 设置 Buildx - 【修正：添加双引号】
       - name: "Set up Docker Buildx"
         uses: docker/setup-buildx-action@v3
 
-      # 4. 构建并推送 Docker 镜像 - 【修正：添加双引号】
       - name: "Build and Push Docker Image"
         uses: docker/build-push-action@v5
         with:
