--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
       packages: write
 
     steps:
-      - name: Checkout repository (Branch: ${{ github.event.inputs.target_branch }})
+      - name: "Checkout repository (Branch: ${{ github.event.inputs.target_branch }})"
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.inputs.target_branch }}
